[package]
name = "frenezulo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/HurricanKai/frenezulo"
categories = ["wasm", "lunatic"]
license = "MIT"
authors = ["Kai Jellinghaus <contact@kaij.tech>"]
readme = "README.md"

[dependencies]
anyhow = "1.0.64"
bytes = "1.2.1"
num-traits = { version = "0.2.15", features = ["i128"] }
multimap = "0.8.3"
serde = "1.0.144"
serde_bytes = "0.11.7"
lunatic = { path = "./crates/lunatic-rs", features = ["msgpack_serializer"] }
submillisecond = { path = "./crates/submillisecond", version = "0.2.0-alpha1", features = ["json"]}
frenezulo-macros = { path = "./crates/frenezulo-macros" }
lunatic-envelop = "1.0.0"

[workspace]
members = [
    "crates/lunatic-rs",    
    "crates/frenezulo-macros",
    "crates/lunatic-rs/lunatic-macros",
    "crates/lunatic-rs/lunatic-test",
    "crates/submillisecond",
    "crates/submillisecond/submillisecond_macros",
    "services/hello-world-service"
]