[package]
name = "hello-world-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenezulo = { path = "../../", version = "0.1.0" }
lunatic = { path = "../../crates/lunatic-rs", features = ["msgpack_serializer"] }
serde_bytes = "0.11.7"

[patch.crates-io]
submillisecond = { path = "../submillisecond" }